recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:6: error: not found: value head
  } else return head::remove(l.tail, v)
                ^