recursion.cons.lessons.recursion.cons.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
  if (l==Nil) {
    return l
  } else if (l.head==v) {
    return remove(l.tail, v) 
  } else return head::remove(l.tail, v)
}